--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>cloud-consumer-feign-hystrix-order80</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>test-rabbtimq-producer</module>
+        <module>test-rabbitmq-consumer</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
